Strengthen Studio Letter acquisition
